--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MsSql": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=PortalDB;Integrated Security=True"
+  }
+} 
+//Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False
+//Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=asp221spu;Integrated Security=True
+//Server=localhost;Database=master;Trusted_Connection=True;
